bin/tests/errors/parser/parser_err_duplicate_modifier.swg
#global fileprivate

public public func toto() {} // swc-expected-error {{parser_err_duplicate_modifier}}
